Fix spacing with u in span

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,5 +21,5 @@
 }
 
 .logo-block:nth-of-type(2) {
-  margin-left: 59px;
+  margin-left: 58px;
 }
